--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "filestack-react": "^5.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
     "unsplash-js": "^7.0.19",
     "webfontloader": "^1.6.28"
   },
