--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@mui/material": "^5.16.5",
     "@pqina/react-pintura": "^9.0.3",
     "axios": "^1.7.2",
+    "compromise": "^14.13.0",
     "filestack-react": "^5.0.0",
+    "html-to-image": "^1.11.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
